// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parallel option should match snapshot for the "2" value: assets 1`] = `
Object {
  "four.css": "body{color:red}a{color:#00f}",
  "one.css": "body{color:red}a{color:#00f}",
  "three.css": "body{color:red}a{color:#00f}",
  "two.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "2" value: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "2" value: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot for the "false" value: assets 1`] = `
Object {
  "four.css": "body{color:red}a{color:#00f}",
  "one.css": "body{color:red}a{color:#00f}",
  "three.css": "body{color:red}a{color:#00f}",
  "two.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "false" value: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "false" value: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: assets 1`] = `
Object {
  "entry-0.css": "body{color:red}a{color:#00f}",
  "entry-1.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value and the number of files is less than the number of cores: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: assets 1`] = `
Object {
  "eight.css": "body{color:red}a{color:#00f}",
  "five.css": "body{color:red}a{color:#00f}",
  "four.css": "body{color:red}a{color:#00f}",
  "one.css": "body{color:red}a{color:#00f}",
  "seven.css": "body{color:red}a{color:#00f}",
  "six.css": "body{color:red}a{color:#00f}",
  "three.css": "body{color:red}a{color:#00f}",
  "two.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value and the number of files is more than the number of cores: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: assets 1`] = `
Object {
  "entry-0.css": "body{color:red}a{color:#00f}",
  "entry-1.css": "body{color:red}a{color:#00f}",
  "entry-2.css": "body{color:red}a{color:#00f}",
  "entry-3.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value and the number of files is same than the number of cores: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: assets 1`] = `
Object {
  "main.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value when only one file passed: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value: assets 1`] = `
Object {
  "four.css": "body{color:red}a{color:#00f}",
  "one.css": "body{color:red}a{color:#00f}",
  "three.css": "body{color:red}a{color:#00f}",
  "two.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot for the "true" value: errors 1`] = `Array []`;

exports[`parallel option should match snapshot for the "true" value: warnings 1`] = `Array []`;

exports[`parallel option should match snapshot when a value is not specify: assets 1`] = `
Object {
  "four.css": "body{color:red}a{color:#00f}",
  "one.css": "body{color:red}a{color:#00f}",
  "three.css": "body{color:red}a{color:#00f}",
  "two.css": "body{color:red}a{color:#00f}",
}
`;

exports[`parallel option should match snapshot when a value is not specify: errors 1`] = `Array []`;

exports[`parallel option should match snapshot when a value is not specify: warnings 1`] = `Array []`;
